--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vue2-vite-bootstrap5-starter",
+  "name": "themev2",
   "version": "0.0.0",
   "scripts": {
     "watch": "vite",
-    "build": "vite build",
+    "build": "vite build && npx stylelint '**/*.scss'",
     "serve": "vite preview",
     "lint": "eslint './src/**/*.{js,vue,md}'",
     "lint:fix": "eslint './src/**/*.{js,vue,md}' --fix"
@@ -13,23 +13,25 @@
     "@vue/composition-api": "^1.0.0-rc.8",
     "@vueuse/core": "^4.9.1",
     "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.11.1",
     "vite-plugin-vue2": "^1.4.0",
+    "vue": "^2.6.12",
     "vue-demi": "^0.7.5",
-    "vue-router": "^3.5.1",
-    "vue": "^2.6.12"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.337",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "eslint": "^7.25.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
-    "eslint": "^7.25.0",
     "prettier": "^2.2.1",
     "sass": "1.32.*",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "vite": "^2.2.3",
     "vite-plugin-components": "^0.8.4",
-    "vite-plugin-icons": "^0.5.0",
-    "vite-plugin-vue2": "^1.4.4",
-    "vite": "^2.2.3"
+    "vite-plugin-vue2": "^1.4.4"
   }
 }
