--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "watch": "vite",
-    "build": "vite build && npx stylelint '**/*.scss'",
+    "build": "vite build",
+    "stylelint": "npx stylelint '**/*.scss'",
     "serve": "vite preview",
     "lint": "eslint './src/**/*.{js,vue,md}'",
     "lint:fix": "eslint './src/**/*.{js,vue,md}' --fix"
@@ -15,6 +16,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.11.1",
+    "svg4everybody": "^2.1.9",
     "vite-plugin-vue2": "^1.4.0",
     "vue": "^2.6.12",
     "vue-demi": "^0.7.5",
@@ -27,6 +29,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
     "prettier": "^2.2.1",
+    "rollup-plugin-copy": "^3.4.0",
     "sass": "1.32.*",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
